--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
-langchain
-langchain_community
-faiss-cpu
-sentence-transformers
-unstructured
-ftfy
-tiktoken
-numpy
+# Core libraries
+langchain>=0.1.0
+langchain_community>=0.0.10
+langchain_openai>=0.0.5
+langchain_huggingface>=0.0.5
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+unstructured>=0.10.30
+ftfy>=6.1.3
+tiktoken>=0.5.2
+numpy>=1.24.0
+
+# UI dependencies
+streamlit>=1.30.0
+gradio>=4.0.0
+
+# Document processing
+pypdf>=3.15.1
+python-docx>=1.0.0
+pdfminer.six>=20221105
+
+# Optional dependencies
+openai>=1.0.0  # For ChatOpenAI integration
